fixed overflow

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main>article div>img,main>article div>section{
 }
 main>article div>section div{
    height: 350px;
-   overflow:scroll;
+   overflow-y:scroll;
 }
 main>article div>section div p{
     padding:20px;
